# orisonc

./: CMakeLists.txt  LICENSE.md  ORISON_SPEC.md  ORISON_TOUR.md  OrisonV1.ebnf  README.md
compiler/: CMakeLists.txt
compiler/driver/: CMakeLists.txt
compiler/driver/include/orison/driver/: compile_result.hpp  compiler_app.hpp
compiler/driver/src/: compiler_app.cpp
compiler/link/: CMakeLists.txt
compiler/link/include/orison/link/: host_linker.hpp  host_runner.hpp
compiler/link/src/: host_linker.cpp  host_runner.cpp
compiler/lowering/: CMakeLists.txt
compiler/lowering/include/orison/lowering/: addressable_binding.hpp  aggregate_path.hpp  branch_binding_scope.hpp  c_abi_adapter.hpp  call_emitter.hpp  concurrency_cleanup.hpp  concurrency_emitter.hpp  concurrency_plan.hpp  concurrency_runtime.hpp  conditional_emitter.hpp  conditional_plan.hpp  control_flow_emitter.hpp  deferred_cleanup.hpp  drop_metadata.hpp  dynamic_array_cleanup_plan.hpp  dynamic_array_runtime.hpp  expression_emitter.hpp  for_loop_lowering.hpp  function_emitter.hpp  function_lowering_session.hpp  function_lowering_state.hpp  function_signature.hpp  immutable_binding_scope.hpp  llvm_cfg.hpp  llvm_ir_emitter.hpp  llvm_ir_verifier.hpp  llvm_names.hpp  llvm_object_emitter.hpp  loop_lowering_support.hpp  lowered_value.hpp  lowering_context.hpp  lowering_diagnostics.hpp  lowering_emission_context.hpp  lowering_failure_lifecycle.hpp  lowering_failure_rendering.hpp  lowering_failures.hpp  lowering_options.hpp  maybe_switch_lowering.hpp  maybe_value_emitter.hpp  member_call_receiver.hpp  (+22 more)
compiler/lowering/src/: addressable_binding.cpp  aggregate_path.cpp  branch_binding_scope.cpp  c_abi_adapter.cpp  call_emitter.cpp  concurrency_cleanup.cpp  concurrency_emitter.cpp  concurrency_plan.cpp  concurrency_runtime.cpp  conditional_emitter.cpp  conditional_plan.cpp  control_flow_emitter.cpp  deferred_cleanup.cpp  drop_metadata.cpp  dynamic_array_cleanup_plan.cpp  dynamic_array_runtime.cpp  expression_emitter.cpp  for_loop_lowering.cpp  function_emitter.cpp  function_signature.cpp  immutable_binding_scope.cpp  llvm_cfg.cpp  llvm_ir_emitter.cpp  llvm_ir_verifier.cpp  llvm_names.cpp  llvm_object_emitter.cpp  lowering_context.cpp  lowering_diagnostics.cpp  maybe_switch_lowering.cpp  maybe_value_emitter.cpp  member_call_receiver.cpp  merge_emitter.cpp  merge_plan.cpp  module_prelude.cpp  null_safe_plan.cpp  ownership_transfer.cpp  repeat_loop_lowering.cpp  source_type_queries.cpp  statement_body_lowering.cpp  statement_emitter.cpp  (+8 more)
compiler/pipeline/: CMakeLists.txt
compiler/pipeline/include/orison/pipeline/: compile_pipeline.hpp  drop_readiness_source_correlation_report.hpp  dynamic_array_cleanup_metadata.hpp
compiler/pipeline/src/: compile_pipeline.cpp  drop_readiness_source_correlation_report.cpp  dynamic_array_cleanup_metadata.cpp  dynamic_array_cleanup_metadata_stage.cpp  dynamic_array_cleanup_metadata_stage.hpp  dynamic_array_cleanup_readiness.cpp  dynamic_array_cleanup_readiness.hpp  link_library_collection.cpp  link_library_collection.hpp  llvm_emission_stage.cpp  llvm_emission_stage.hpp  lowering_emission_options.cpp  lowering_emission_options.hpp  lowering_emission_reports.cpp  lowering_emission_reports.hpp  semantic_analysis_stage.cpp  semantic_analysis_stage.hpp  semantic_drop_reports.cpp  semantic_drop_reports.hpp
compiler/semantics/: CMakeLists.txt
compiler/semantics/include/orison/semantics/: drop_model.hpp  module_semantic_analyzer.hpp
compiler/semantics/src/: drop_model.cpp  module_semantic_analyzer.cpp
compiler/syntax/: CMakeLists.txt
compiler/syntax/include/orison/syntax/: lexer.hpp  module_parser.hpp  token.hpp
compiler/syntax/src/: lexer.cpp  module_parser.cpp
docs/: frontend-parity-audit.md  lowering-prep.md
examples/: README.md  concurrency_task_main.or  concurrency_thread_main.or  dynamic_array_parameter_reads.or  ffi_aggregate_scalar_parameters.or  ffi_fixed_parameters.or  local_aggregate_let.or  local_aggregate_parameter_access.or  local_array_for.or  local_branch_aggregate_field_assignment.or  local_branch_aggregate_reassignment.or  local_branch_inferred_aggregate_let.or  local_branch_nested_array_assignment.or  local_branch_return_container_aggregate_scalar.or  local_call_argument_aggregate_scalar.or  local_control_flow_aggregate_scalar.or  local_helper_array_for.or  (+59 more)
runtime/: CMakeLists.txt
runtime/src/: concurrency_runtime.c  concurrency_runtime.cpp
tests/: CMakeLists.txt
tests/fixtures/: drop_readiness.or  drop_readiness_multi.or  dynamic_array_cleanup_audit.or  dynamic_array_owned_parameter_rejected.or  dynamic_array_owned_parameter_source_drop.or  semantic_partial_drop_resolution.or  semantic_planned_drop.or
tests/smoke/: addressable_binding_smoke.cpp  aggregate_field_cli_fixtures.hpp  aggregate_path_smoke.cpp  branch_binding_scope_smoke.cpp  c_abi_adapter_smoke.cpp  call_emitter_smoke.cpp  canonical_pipeline_smoke.cpp  compile_pipeline_smoke.cpp  compiler_app_smoke.cpp  concurrency_emitter_smoke.cpp  concurrency_plan_smoke.cpp  concurrency_runtime_abi_smoke.c  concurrency_runtime_abi_smoke.cpp  concurrency_runtime_smoke.cpp  conditional_emitter_smoke.cpp  conditional_plan_smoke.cpp  control_flow_emitter_smoke.cpp  driver_address_cli_smoke.cpp  driver_aggregate_access_cli_run_smoke.cpp  driver_aggregate_cli_run_smoke.cpp  driver_aggregate_field_cli_smoke.cpp  driver_aggregate_lowering_smoke.cpp  driver_array_cli_run_smoke.cpp  driver_array_constant_cli_smoke.cpp  driver_artifact_smoke.cpp  driver_async_origin_diagnostics_smoke.cpp  driver_basic_smoke.cpp  driver_choice_constructor_cli_smoke.cpp  driver_choice_final_expression_cli_smoke.cpp  driver_choice_inference_cli_smoke.cpp  driver_choice_ternary_cli_smoke.cpp  driver_concurrency_capture_diagnostics_smoke.cpp  driver_concurrency_diagnostics_smoke.cpp  driver_concurrency_lowering_smoke.cpp  driver_concurrency_transfer_diagnostics_smoke.cpp  driver_drop_report_cli_smoke.cpp  driver_ffi_cli_smoke.cpp  driver_final_expression_cli_smoke.cpp  driver_generic_cli_smoke.cpp  driver_loop_control_diagnostics_smoke.cpp  (+57 more)
(+16 files in other folders)
